noinst_LIBRARIES=libreactor.a
INCLUDES=-I$(top_srcdir)/include
LDFLAGS=-std=c++11 -lpthread
AM_CXXFLAGS = -std=c++11
libreactor_a_SOURCES=Accept.cpp Buffer.cpp Epoll.cpp Event.cpp Event_handler.cpp Internet_addr.cpp Poll.cpp Reactor.cpp Reactor_thread.cpp Socket.cpp Tcp_connection.cpp Tcp_server.cpp Thread_pool.cpp Timer.cpp Timer_heap.cpp Time_stamp.cpp
